--- a/dev/app/src/addProduct.html
+++ b/dev/app/src/addProduct.html
@@ -73,36 +73,16 @@ https://www.tooplate.com/view/2114-pixie
             <label for="product-name" class="col-md-2 control-label">상품명</label>
             <div class="col-md-10">
               <input type="text" name="product-name" class="form-control" id="product-name"
-                placeholder="iPhone, Jeans, shoes etc" required="required"></input>
+                placeholder="제품 이름 입력" required="required"></input>
             </div>
           </div>
 
-          <!-- <div class="form-group">
-            <label for="product-category" class="col-sm-2 control-label">카테고리</label>
-            <div class="col-sm-10">
-              <select class="form-control" name="product-category" id="product-category">
-                <option>예술품</option>
-                <option>서적</option>
-                <option>카메라</option>
-                <option>휴대폰 & 액세서리</option>
-                <option>의류</option>
-                <option>컴퓨터 & 태블릿</option>
-                <option>상품권 & 쿠폰</option>
-                <option>악기 & 음향 장비</option>
-                <option>반려 동물 용품</option>
-                <option>도자기 & 유리 제품</option>
-                <option>스포츠 용품</option>
-                <option>티켓</option>
-                <option>장난감 & 취미 용품</option>
-                <option>게임</option>
-              </select>
-            </div>
-          </div> -->
+         
           <div class="form-group">
             <label for="product-price" class="col-md-2 control-label">가격</label>
             <div class="col-md-10">
               <input type="text" class="form-control" name="product-price" id="product-price" required="required"
-                placeholder="In Ether, Ex: 0.2"></input>
+                placeholder="이더단위로 입력 (예. 0.5)"></input>
             </div>
           </div>
           <div class="form-group">
@@ -133,7 +113,7 @@ https://www.tooplate.com/view/2114-pixie
             <label for="product-description" class="col-md-2 control-label">상세 설명</label>
             <div class="col-md-10">
               <textarea class="form-control" name="product-description" rows="8" id="product-description"
-                placeholder="Enter detailed product description" required="required"></textarea>
+                placeholder="상품 설명을 입력하세요." required="required"></textarea>
             </div>
           </div>
 
