--- a/dev/app/src/addProduct.html
+++ b/dev/app/src/addProduct.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-  <title>KNU Phone Market</title>
+  <title>KNU Phone Market - addProduct</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
